Fixes bootstrap3theme spacing issue between navbar & content

--- a/themes/bootstrap3theme/less/bootstraptheme.less
+++ b/themes/bootstrap3theme/less/bootstraptheme.less
@@ -6,14 +6,9 @@ span.required {
 	margin-top : @menu_height+px;
 }
 
-//#sidebar {
-//    float:left;
-//}
-//
-//#content {
-//    margin-left: 0;
-//	margin-right: 2.7624309392265194%;
-//}
+.container.main-menu {
+    margin-bottom:15px;
+}
 
 .btn {
 	margin: 2px;
